--- a/css/calendar.css
+++ b/css/calendar.css
@@ -8,70 +8,39 @@ html, body{
 .dhx_cal_container {
     font-family: 'Poppins', sans-serif;
 }
-
-.add_event_button {
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    background: #ff5722;
-    border-radius: 50px;
-    bottom: 40px;
-    right: 55px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
-    z-index: 5;
-    cursor:pointer;
+.dhx_cal_prev_button {
+    color: #91cde0;
+    transition: all 0.4s ease 0s;
 }
 
-.add_event_button:after {
-    background: #000;
-    border-radius: 2px;
-    color: #FFF;
-    content: attr(data-tooltip);
-    margin: 16px 0 0 -137px;
-    opacity: 0;
-    padding: 4px 9px;
-    position: absolute;
-    visibility: visible;
-    font-family: "Roboto";
-    font-size: 14px;
-    visibility: hidden;
-    transition: all .5s ease-in-out;
+.dhx_cal_next_button {
+    color: #91cde0;
+    transition: all 0.4s ease 0s;
 }
 
-.add_event_button:hover {
-    background: #ff774c;
+.dhx_cal_date {
+    text-transform: uppercase;
 }
 
-.add_event_button:hover:after {
-    opacity: 0.55;
-    visibility: visible;
+.dhx_cal_header{
+    text-transform: uppercase;
+    color:#91cde0 ;
 }
-
-.add_event_button span:before {
-    content:"";
-    background: #fff;
-    height: 16px;
-    width: 2px;
-    position: absolute;
-    left: 26px;
-    top: 20px;
-}
-
-.add_event_button span:after {
-    content:"";
-    height: 2px;
-    width: 16px;
-    background: #fff;
-    position: absolute;
-    left: 19px;
-    top: 27px;
-}
-
 #logout_button {
     font-family: 'Poppins', sans-serif;
     font-size: 12px;
+    text-transform: uppercase;
     opacity: 0.50;
+    transition: all 0.4s ease 0s;
     padding: 10px;
-    background:  ·fff;
     border-radius: 10%;
+}
+
+#logout_button:hover {
+    letter-spacing: 2px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    background: #91cde0;
+    transition: all 0.4s ease 0s;
 }
