--- a/css/login.css
+++ b/css/login.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background: #f2f2f2;
+  font-family: 'Poppins', sans-serif;
+  background: #eff7fa;
   color: #333333;
 }
 
@@ -13,6 +13,7 @@ div {
 }
 
 #container-home {
+  font-family: 'Poppins', sans-serif;
   width: 800px;
   min-height: 300px;
   background: #ffffff;
@@ -52,7 +53,6 @@ input {
   width: 100%;
   background: transparent;
   display: block;
-  /*padding: 0 5px 0 45px;*/
   padding: 0 5px;
   color: #555555;
   font-size: 15px;
@@ -67,17 +67,25 @@ input {
 
 button {
   font-size: 15px;
-  color: #ffffff;
+  color: #000000;
   text-transform: uppercase;
   justify-content: center;
   width: 100%;
+  transition: all 0.4s ease 0s;
   height: 50px;
   margin: 10px 0;
-  background: #a64bf4;
-  background: -webkit-linear-gradient(left, #21d4fd, #b721ff);;
+  background: #c0e2ed;
   border: none;
-  border-radius: 25px;
+  border-radius: 10px;
 }
+
+button:hover {
+  background: #91cde0;
+  letter-spacing: 1px;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.17);
+  transition: all 0.4s ease 0s;
+}
+
 
 
 #signup_option {
