--- a/css/calendar.css
+++ b/css/calendar.css
@@ -31,6 +31,7 @@ html, body{
     font-size: 12px;
     text-transform: uppercase;
     opacity: 0.50;
+    cursor:pointer;
     transition: all 0.4s ease 0s;
     padding: 10px;
     border-radius: 10%;
